2006-12-01  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst/videoscale/vs_4tap.c:
	* win32/MANIFEST:
	* win32/common/config.h:
	* win32/vs8/libgstvideoscale.vcproj:
	Fix compilation on win32 under VS8
	Patch by: Sergey Scobich <sergey dot scobich at gmail dot com>
	Partially fixes #381175

2006-11-30  Michael Smith  <msmith@fluendo.com>

	* tests/check/pipelines/theoraenc.c: (check_buffer_granulepos),
	(GST_START_TEST):
	  It would be very bad if, after a discont buffer, we thought every
	  single following buffer was also discont. So, add to the test to
	  ensure that this isn't the case.
	  
	* ext/theora/theoraenc.c: (theora_enc_is_discontinuous):
	  ... it was the case. So fix it.

2006-11-28  Wim Taymans  <wim@fluendo.com>

	* gst/playback/gstplaybasebin.c: (check_queue_event):
	Improve debug.

	* gst/videoscale/gstvideoscale.c: (gst_video_scale_transform_caps):
	Fix width and height range from 16 - 4096 to 1 - MAXINT, just like the
	padtemplate caps. Refixes #357577.

2006-11-28  Wim Taymans  <wim@fluendo.com>

	* gst/playback/gstplaybasebin.c: (check_queue_event),
	(queue_threshold_reached), (queue_out_of_data),
	(gen_preroll_element):
	Add event probe to see when EOS is in a queue and we can disable the
	underrun signals. Fixes #357577.

2006-11-28  Edward Hervey  <edward@fluendo.com>

	* gst/playback/Makefile.am:
	* gst/playback/gstdecodebin2.c: (gst_decode_bin_get_type),
	(_gst_boolean_accumulator), (gst_decode_bin_class_init),
	(gst_decode_bin_factory_filter), (compare_ranks), (print_feature),
	(gst_decode_bin_init), (gst_decode_bin_dispose),
	(gst_decode_bin_finalize), (gst_decode_bin_set_property),
	(gst_decode_bin_get_property), (gst_decode_bin_set_caps),
	(gst_decode_bin_get_caps), (gst_decode_bin_autoplug_continue),
	(gst_decode_bin_autoplug_sort), (analyze_new_pad), (connect_pad),
	(connect_element), (expose_pad), (type_found),
	(pad_added_group_cb), (pad_removed_group_cb),
	(no_more_pads_group_cb), (pad_added_cb), (pad_removed_cb),